--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
     </header>
 
     <span class='project-page-link'>
-      Find the complete instructions on the <a href=''>github project page</a>.
+      Find the complete instructions on the <a href='https://github.com/codeams/browser-cache-file-recovery'>github project page</a>.
     </span>
 
     <textarea class='input-textarea' placeholder="Enter your file's cache string" spellcheck='false'></textarea>
